--- a/05_IT_프로그래밍/FrontEnd_01_JavasriptJquery_ObjectOriented/5_1_2_funtion_exam.html
+++ b/05_IT_프로그래밍/FrontEnd_01_JavasriptJquery_ObjectOriented/5_1_2_funtion_exam.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<title></title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title></title>
 
 	<style>
 		.tab-menu {
@@ -43,54 +43,52 @@
 		.tab-menu li.menuitem6 {
 			background-image: url(images/newbtn.bar.6.png);
 		}
-
+		
 	</style>
-
-	<script src="../../libs/jquery-1.11.0.min.js"></script>
+	 
+    <script src="../../libs/jquery-1.11.0.min.js"></script>
 	<script>
 
 		/*
-		 예제03: 예제 02의 풀이를 활용해 두 번째 탭메뉴가 독립적으로 동작할 수 있게 만들어 주세요.
-		 예제를 좀더 풀어서 설명해 보겠습니다. 먼저 풀이 전 코드를 살펴보면 다음과 같이 탭메뉴 두 개가 있을 겁니다.
+		 예제 03: 예제2의 풀이를 활용해 두 번째 탭메뉴가 독립적으로 동작할 수 있게 만들어 주세요.
 
-		 작업02
-		 	- init()에서 #tabMenu1을 #tabMenu2로 변경
+		 풀이2: 기능 수정
 
-		 작업01
-		 	- tabMenu1을 tabMenu2로 변경
 		 */
 
-		$(document).ready(function(){
-			tabMenu1.init();
-			tabMenu1.initEvent();
 
-			tabMenu2.init();
-			tabMenu2.initEvent();
+
+		$(document).ready(function(){
+			// 인스턴스 생성
+			var tabMenu1 = new TabMenu("#tabMenu1");
+
+			// 두번째 탭메뉴 인스턴스 생성
+			var tabMenu2 = new TabMenu("#tabMenu2");
+
 		});
 
-		var tabMenu1 = {
-			$tabMenu:null,
-			$menuItems:null,
-			$selectMenuItem:null,
-
+		function TabMenu(selector){
+			this.$tabMenu =null;
+			this.$menuItems=null;
+			this.$selectMenuItem=null;
 			// 요소 초기화
-			init:function(){
-				this.$tabMenu = $("#tabMenu1");
+			this.init = function(selector) {
+				this.$tabMenu = $(selector);
 				this.$menuItems = this.$tabMenu.find("li");
-			},
+			}
 
 			// 이벤트 등록
-			initEvent:function(){
+			this.initEvent = function() {
 				var objThis = this;
-				this.$menuItems.on("click",function(){
+				this.$menuItems.on("click", function() {
 					objThis.setSelectItem($(this));
 				});
-			},
+			}
 
 			// $menuItem에 해당하는 메뉴 아이템 선택하기
-			setSelectItem:function($menuItem){
+			this.setSelectItem = function($menuItem) {
 				// 기존 선택메뉴 아이템을 비활성화 처리 하기
-				if(this.$selectMenuItem){
+				if (this.$selectMenuItem) {
 					this.$selectMenuItem.removeClass("select");
 				}
 
@@ -98,44 +96,16 @@
 				this.$selectMenuItem = $menuItem;
 				this.$selectMenuItem.addClass("select");
 			}
+
+			// 초기화 메서드 호출
+			this.init(selector);
+			this.initEvent();
 		}
 
-
-		var tabMenu2 = {
-			$tabMenu:null,
-			$menuItems:null,
-			$selectMenuItem:null,
-
-			// 요소 초기화
-			init:function(){
-				this.$tabMenu = $("#tabMenu2");
-				this.$menuItems = this.$tabMenu.find("li");
-			},
-
-			// 이벤트 등록
-			initEvent:function(){
-				var objThis = this;
-				this.$menuItems.on("click",function(){
-					objThis.setSelectItem($(this));
-				});
-			},
-
-			// $menuItem에 해당하는 메뉴 아이템 선택하기
-			setSelectItem:function($menuItem){
-				// 기존 선택메뉴 아이템을 비활성화 처리 하기
-				if(this.$selectMenuItem){
-					this.$selectMenuItem.removeClass("select");
-				}
-
-				// 신규 아이템 활성화 처리 하기
-				this.$selectMenuItem = $menuItem;
-				this.$selectMenuItem.addClass("select");
-			}
-		}
 
 	</script>
 </head>
-
+	
 <body>
 	<p>첫 번째 탭메뉴</p>
 	<ul class="tab-menu" id="tabMenu1">
@@ -155,6 +125,7 @@
 		<li class="menuitem5">airbnb</li>
 		<li class="menuitem6">path</li>
 	</ul>
+
 
 </body>
 </html>
